--- a/03-confirmation.html
+++ b/03-confirmation.html
@@ -19,54 +19,65 @@
 <!-- Une page de confirmation de commande, remerciant l'utilisateur pour sa commande, et indiquant le prix total et l'identifiant de commande envoyé par le serveur. -->
 
 <body>
-    <!-- En tête de page. -->
+    <!-- En tête de page avec sa navbar dépliante -->
     <header class="px-4 py-3">
-        <navbar>
-            <div class="collapse bg-pinkORI" id="navbarHeader">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-md-7 py-4">
-                            <h2 class="text-black">À propos</h2>
-                            <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en ligne</em>.
-                            </p>
-                        </div>
-                        <div class="col-sm-4 offset-md-1 py-4">
-                            <h2 class="text-black">Liens</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
-                                </li>
-                            </ul>
+        <div class="new-width">
+            <navbar>
+                <div class="collapse bg-pinkORI" id="navbarHeader">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-8 col-md-7 py-4">
+                                <h2 class="text-black">À propos</h2>
+                                <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en
+                                        ligne</em>.
+                                </p>
+                            </div>
+                            <div class="col-sm-4 offset-md-1 py-4">
+                                <h2 class="text-black">Liens</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
+                                    <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                                                panier</em></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="navbar navbar-dark bg-pinkORI box-shadow">
-                <div class="container d-flex justify-content-between">
-                    <a href="#" class="navbar-brand d-flex align-items-center">
-                        <a class="navbar-brand" href="index.html">
-                            <img class="ms-3" src="images/logo-orinoco.jpg" title="titre du site e-commerce"
-                                alt="vente internationale, meilleurs achats, site web, proposition de produits" />
+                <div class="navbar navbar-dark bg-pinkORI box-shadow">
+                    <div class="container d-flex justify-content-between">
+                        <a href="#" class="navbar-brand d-flex align-items-center">
+                            <a class="navbar-brand" href="index.html">
+                                <img class="ms-3" src="images/logo-orinoco.jpg" href="index.html"
+                                    title="titre du site e-commerce"
+                                    alt="vente internationale, meilleurs achats, site web, proposition de produits" />
+                            </a>
                         </a>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-                        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+                            aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </navbar>
+            </navbar>
+        </div>
     </header>
 
+    <!-- Message de confirmation d'achat et bouton de retour -->
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
-        <p class="text-center text-4xl font-bold mb-4">Nous vous remercions pour vos achats !</p>
-        <p class="text-center text-xl mb-4">Voici l'identifiant de votre commande : </p>
-        <button type="button" class="btn btn-lg btn-outline-secondary btn-outline-ORI">Retourner à l'écran
-            d'acceuil</button>
+        <p class="display-5 text-center text-4xl font-bold mb-4">Nous vous remercions pour vos achats !</p>
+        <p class="display-6 text-center text-xl mb-4">Voici l'identifiant de votre commande : </p>
+
+        <div class="text-center">
+            <a href="index.html">
+                <button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit"
+                    style="margin-right: auto; margin-left: auto;">Retourner à l'écran
+                    d'acceuil</button>
+            </a>
+        </div>
     </main>
 
-
-    <!-- Bas de page. -->
+    <!-- Bas de page informatif -->
     <footer class="mt-5">
         <div class="container py-4 px-5 bg-pinkORI">
             <span class="orangeORI ms-2"><em><a href="mailto:mag@orinoco.fr"
@@ -97,18 +108,6 @@
     <script src="./src/index.js"></script>
     <script src="./src/query.js"></script>
     <script src="./server.js"></script>
-
-    <script src="./controllers/camera.js"></script>
-    <script src="./controllers/furniture.js"></script>
-    <script src="./controllers/teddy.js"></script>
-
-    <script src="./models/Camera.js"></script>
-    <script src="./models/Furniture.js"></script>
-    <script src="./models/Teddy.js"></script>
-
-    <script src="./routes/"></script>
-    <script src="./routes/"></script>
-    <script src="./routes/"></script>
 </body>
 
 </html>
