--- a/index.html
+++ b/index.html
@@ -19,67 +19,71 @@
 <!-- Une seule catégorie de produits sera présentée : les caméras. -->
 
 <body>
-    <!-- En tête de page. -->
+    <!-- En tête de page avec sa navbar dépliante -->
     <header class="px-4 py-3">
-        <navbar>
-            <div class="collapse bg-pinkORI" id="navbarHeader">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-8 col-md-7 py-4">
-                            <h2 class="text-black">À propos</h2>
-                            <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en ligne</em>.
-                            </p>
-                        </div>
-                        <div class="col-sm-4 offset-md-1 py-4">
-                            <h2 class="text-black">Liens</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre panier</em></a>
-                                </li>
-                            </ul>
+        <div class="new-width">
+            <navbar>
+                <div class="collapse bg-pinkORI" id="navbarHeader">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-8 col-md-7 py-4">
+                                <h2 class="text-black">À propos</h2>
+                                <p class="orangeORI"><em>Orinoco est un site e-commerce de vente de produits en
+                                        ligne</em>.
+                                </p>
+                            </div>
+                            <div class="col-sm-4 offset-md-1 py-4">
+                                <h2 class="text-black">Liens</h2>
+                                <ul class="list-unstyled">
+                                    <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
+                                    <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                                                panier</em></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="navbar navbar-dark bg-pinkORI box-shadow">
-                <div class="container d-flex justify-content-between">
-                    <a href="#" class="navbar-brand d-flex align-items-center">
-                        <a class="navbar-brand" href="index.html">
-                            <img class="ms-3" src="images/logo-orinoco.jpg" href="index.html"
-                                title="titre du site e-commerce"
-                                alt="vente internationale, meilleurs achats, site web, proposition de produits" />
+                <div class="navbar navbar-dark bg-pinkORI box-shadow">
+                    <div class="container d-flex justify-content-between">
+                        <a href="#" class="navbar-brand d-flex align-items-center">
+                            <a class="navbar-brand" href="index.html">
+                                <img class="ms-3" src="images/logo-orinoco.jpg" href="index.html"
+                                    title="titre du site e-commerce"
+                                    alt="vente internationale, meilleurs achats, site web, proposition de produits" />
+                            </a>
                         </a>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-                        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+                            aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </div>
+            </navbar>
+
+            <!-- Ajout d'un message d'alerte désactivable -->
+            <aside>
+                <div class="alert alert-dark alert-dismissible fade show mt-2 bg-pinkORI" role="alert">
+                    <span class="alert-heading">Découvrez notre produit en cliquant sur le bouton associé !</span>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">X</span>
                     </button>
                 </div>
-            </div>
-        </navbar>
-
-        <aside>
-            <div class="alert alert-dark alert-dismissible fade show mt-2 bg-pinkORI" role="alert">
-                <span class="alert-heading">Découvrez notre produit en cliquant sur le bouton associé !</span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">X</span>
-                </button>
-            </div>
-        </aside>
+            </aside>
+        </div>
     </header>
 
     <!-- Centre de page : articles. -->
     <main>
         <div class="py-4"></div>
         <div class="container">
-
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5">
+                <!-- Interpollation du JS pour l'affichage de chaque caméra récupérer dans l'API concernée in index.js -->
             </div>
         </div>
-
     </main>
 
-    <!-- Bas de page. -->
+    <!-- Bas de page informatif -->
     <footer class="mt-5">
         <div class="container py-4 px-5 bg-pinkORI">
             <span class="orangeORI ms-2"><em><a href="mailto:mag@orinoco.fr"
@@ -105,25 +109,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
-
+    <!-- Liens JS rattachés -->
     <script src="./src/index.js"></script>
     <script src="./src/query.js"></script>
-    <!-- Ajout des fichiers JS par leur source
-    <script src="./app.js"></script>
- 
-    <script src="./server.js"></script>
-
-    <script src="./controllers/camera.js"></script>
-    <script src="./controllers/furniture.js"></script>
-    <script src="./controllers/teddy.js"></script>
-
-    <script src="./models/Camera.js"></script>
-    <script src="./models/Furniture.js"></script>
-    <script src="./models/Teddy.js"></script>
-
-    <script src="./routes/"></script>
-    <script src="./routes/"></script>
-    <script src="./routes/"></script> -->
 </body>
 
 </html>
