--- a/01-produit.html
+++ b/01-produit.html
@@ -80,6 +80,8 @@
                         <h3 class="display-6 text-center pinkORI" id="nameProduct">${camera.name}</h3>
                         <h4 class="text-center pinkORI" id="priceProduct">${camera.price}€</h4>
                         <p class="card-text pinkORI" id="descriptionProduct">${camera.description}</p>
+                        <p class="card-text pinkORI" id="descriptionLenses">${camera.lenses}</p>
+                        <!-- menu déroulant permettant à l'utilisateur de choisir une option de personnalisation sans back-end -->
                         <div class="d-flex justify-content-between align-items-center">
                         </div>
 
