--- a/03-confirmation.html
+++ b/03-confirmation.html
@@ -67,6 +67,7 @@
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
         <p class="display-5 text-center text-4xl font-bold mb-4">Nous vous remercions pour vos achats !</p>
         <p class="display-6 text-center text-xl mb-4">Voici l'identifiant de votre commande : </p>
+        <!-- Ici attribuer un identifiant de commande propre et afficher le prix total -->
 
         <div class="text-center">
             <a href="index.html">
