--- a/confirmation.html
+++ b/confirmation.html
@@ -72,8 +72,9 @@
         <div class="text-center">
             <a href="index.html">
                 <button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit"
-                    style="margin-right: auto; margin-left: auto;">Retourner à l'écran
-                    d'acceuil</button>
+                    style="margin-right: auto; margin-left: auto;">
+                    Retourner à l'écran d'acceuil
+                </button>
             </a>
         </div>
     </main>
