--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
+  <script src="/polyfill.bundle.js"></script>
+  <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
+  <script src="/app.bundle.js"></script>
+  <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
+
+  <!-- Liens bootstrap pour JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="./src/cart.js"></script>
 </head>
 <!-- Une page “panier” contenant un résumé des produits dans le panier, le prix total et un formulaire permettant de passer une commande. Les données du formulaire doivent être correctes et bien formatées avant d'être renvoyées au back-end. Par exemple, pas de texte dans les champs date ; -->
 
@@ -36,7 +54,7 @@
                 <h2 class="text-black">Liens</h2>
                 <ul class="list-unstyled">
                   <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                  <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                  <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
                         panier</em></a>
                   </li>
                 </ul>
@@ -73,41 +91,21 @@
           style="width: 100%; text-indent: 0; border-color: inherit; box-sizing: border-box; border-width: 0; border-style: solid;">
           <thead>
             <tr class="border bg-white">
-              <th class="py-2">Produit</th>
-              <th>Quantité</th>
+              <th class="py-2"></th>
+              <th>Produit</th>
               <th>Prix</th>
-              <th>Prix total</th>
             </tr>
           </thead>
 
-          <tbody id="">
-            <template id="">
-              <tr class="border bg-white rounded">
-                <td id="" class="text-center p-0 py-2">Caméra</td>
-                <td class="text-center p-0">
-                  <form class="flex">
-                    <!-- <select
-                      id="productQuantity"
-                      class="border border-indigo-200 rounded text-center w-full block pl-3 pr-10 py-1 text-base focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm z-10"
-                      name="quantity"
-                      id="quantity"
-                    >
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                    </select> -->
-                  </form>
-                </td>
-                <td id="" class="text-center p-0">X€</td>
-                <td id="" class="text-center p-0">x€</td>
-              </tr>
-            </template>
-            <tr class="bg-gray-100">
+          <tbody id="cart-container" style="background-color: lightgray;">
+            <!-- <tr class="bg-gray-100">
               <td colspan="3" class="text-center py-2">Total</td>
               <td class="text-center" id="">X€</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
       </section>
+
 
       <!-- Ajout du formulaire permettant de procéder au paiement -->
       <section>
@@ -199,33 +197,6 @@
           -- Aides et informations</em></span>
     </div>
   </footer>
-
-  <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
-  <script src="/polyfill.bundle.js"></script>
-  <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
-  <script src="/app.bundle.js"></script>
-  <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
-
-  <!-- Liens bootstrap pour JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-
-  <!-- Ajout des fichiers JS par leur source -->
-  <script src="./app.js"></script>
-  <script src="./src/index.js"></script>
-  <script src="./src/query.js"></script>
-  <script src="./server.js"></script>
-
-  <script src="./controllers/camera.js"></script>
-  <script src="./models/Camera.js"></script>
-  <script src="./routes/camera.js"></script>
 </body>
 
 </html>
