--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link rel="shortcut icon" type="image/png" href="./images.png">
     <!-- Lien du fichier CSS compilé avec SASS "compressed" et Bootsrap -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
+    <script src="/polyfill.bundle.js"></script>
+    <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
+    <script src="/app.bundle.js"></script>
+    <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
+
+    <!-- Liens bootstrap pour JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+
+    <!-- Liens JS rattachés -->
+    <script src="./src/index.js"></script>
 </head>
 <!-- Une page de vue sous forme de liste, montrant tous les articles disponibles à la vente ; -->
 <!-- Une seule catégorie de produits sera présentée : les caméras. -->
@@ -36,7 +56,7 @@
                                 <h2 class="text-black">Liens</h2>
                                 <ul class="list-unstyled">
                                     <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                    <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                                    <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
                                                 panier</em></a>
                                     </li>
                                 </ul>
@@ -77,7 +97,7 @@
     <main>
         <div class="py-4"></div>
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5" id="cameras_container">
                 <!-- Interpollation du JS pour l'affichage de chaque caméra récupérer dans l'API concernée in index.js -->
             </div>
         </div>
@@ -91,27 +111,6 @@
                     -- Aides et informations</em></span>
         </div>
     </footer>
-
-    <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
-    <script src="/polyfill.bundle.js"></script>
-    <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
-    <script src="/app.bundle.js"></script>
-    <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
-
-    <!-- Liens bootstrap pour JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-
-    <!-- Liens JS rattachés -->
-    <script src="./src/index.js"></script>
-    <script src="./src/query.js"></script>
 </body>
 
 </html>
