--- a/product.html
+++ b/product.html
@@ -15,6 +15,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
+    <script src="/polyfill.bundle.js"></script>
+    <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
+    <script src="/app.bundle.js"></script>
+    <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
+
+    <!-- Liens bootstrap pour JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+
+    <!-- Ajout des fichiers JS par leur source -->
+    <script src="./src/product.js"></script>
 </head>
 <!-- Une page “produit”, qui affiche de manière dynamique l'élément sélectionné par l'utilisateur et lui permet de personnaliser le produit et de l'ajouter à son panier ; -->
 
@@ -36,7 +55,7 @@
                                 <h2 class="text-black">Liens</h2>
                                 <ul class="list-unstyled">
                                     <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                    <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                                    <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
                                                 panier</em></a>
                                     </li>
                                 </ul>
@@ -67,7 +86,6 @@
     <main>
         <div class="py-4"></div>
         <div class="container-fluid">
-
         </div>
     </main>
 
@@ -79,26 +97,6 @@
                     -- Aides et informations</em></span>
         </div>
     </footer>
-
-    <!-- Ajout de Babel pour transpiler le code JS (adaptations plus anciennes) : -->
-    <script src="/polyfill.bundle.js"></script>
-    <!-- Appel du package bundle.js (minifiy, package, sépare en fichiers, accès à des bibliothèques) : -->
-    <script src="/app.bundle.js"></script>
-    <!-- Ce chemin permet l'utilisation d'un serveur "localhost" avec "npm start" testant notre code et rechargeant automatiquement le navigateur après modification -->
-
-    <!-- Liens bootstrap pour JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-
-    <!-- Ajout des fichiers JS par leur source -->
-    <script src="./src/product.js"></script>
 </body>
 
 </html>
