--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Les balises de liens -->
     <link rel="canonical" href="https://florian75011.github.io/P5_rouanet_florian_04062021/index.html" />
     <link rel="shortcut icon" type="image/png" href="./images.png">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
     <!-- Lien du fichier CSS compilé avec SASS "compressed" et Bootsrap -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -55,9 +56,10 @@
                             <div class="col-sm-4 offset-md-1 py-4">
                                 <h2 class="text-black">Liens</h2>
                                 <ul class="list-unstyled">
-                                    <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                    <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
-                                                panier</em></a>
+                                    <li><a href="index.html" class="purpleORI disable-link"
+                                            style="font-size: 1.5rem;"><em>Accueil</em></a></li>
+                                    <li><a href="cart.html" class="purpleORI disable-link"
+                                            style="font-size: 1.5rem;"><em>Votre panier</em></a>
                                     </li>
                                 </ul>
                             </div>
@@ -98,7 +100,7 @@
         <div class="py-4"></div>
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bg-pinkORI px-5" id="cameras_container">
-                <!-- Interpollation du JS pour l'affichage de chaque caméra récupérer dans l'API concernée in index.js -->
+                <!-- Interpollation du JS pour l'affichage de chaque caméra récupérée dans l'API concernée -->
             </div>
         </div>
     </main>
