--- a/product.html
+++ b/product.html
@@ -86,6 +86,7 @@
     <main>
         <div class="py-4"></div>
         <div class="container-fluid">
+            <!-- Gestion JS de l'affichage des détails des caméras récupérés via l'API -->
         </div>
     </main>
 
