--- a/cart.html
+++ b/cart.html
@@ -103,52 +103,51 @@
         </table>
       </section>
 
-
       <!-- Ajout du formulaire permettant de procéder au paiement -->
       <section>
         <div class="container bg-pinkORI mt-4 p-4">
           <h2>Formulaire pour passer commande :</h2>
-          <form class="needs-validation" novalidate>
+          <form action="confirmation.html" method="GET" onsubmit="return validationForm()" class="needs-validation" novalidate>
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="prenom">Prénom</label>
-                <input type="text" class="form-control" id="prenom" placeholder="Pierre" required>
+                <input type="text" class="form-control" id="prenom" onblur="checkprenom()" name="prenom" placeholder="Pierre" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="nom">Nom de famille</label>
-                <input type="text" class="form-control" id="nom" placeholder="Giraud" required>
+                <input type="text" class="form-control" id="nom" name="nom" placeholder="Giraud" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="pseudo">Pseudonyme</label>
-                <input type="text" class="form-control" id="pseudo" placeholder="PierreGird" required>
+                <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="PierreGird" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
             </div>
             <div class="form-group col-md-4 mb-3">
               <label for="email">Entrez votre mail</label>
-              <input type="email" class="form-control" id="email" placeholder="pierre.giraud@edhec.com">
+              <input type="email" class="form-control" id="email" name="email" placeholder="pierre.giraud@edhec.com" required>
             </div>
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label for="ville">Ville</label>
-                <input type="text" class="form-control" id="ville" placeholder="Ville" required>
+                <input type="text" class="form-control" id="ville" name="ville" placeholder="Ville" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="pays">Pays</label>
-                <input type="text" class="form-control" id="pays" placeholder="Pays" required>
+                <input type="text" class="form-control" id="pays" name="pays" placeholder="Pays" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
               <div class="col-md-4 mb-3">
                 <label for="cp">Code postal</label>
-                <input type="number" class="form-control" id="cp" placeholder="Code postal" required>
+                <input type="number" class="form-control" id="cp" name="cp" min="0" placeholder="Code postal" required>
                 <div class="valid-feedback">Okay !</div>
                 <div class="invalid-feedback">Valeur incorrecte</div>
               </div>
@@ -161,9 +160,13 @@
                 <div class="invalid-feedback">Vous devez accepter les CGU pour continuer</div>
               </div>
             </div>
-            <a href="confirmation.html"><button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit">
+              <button class="btn bg-purpleORI text-white mt-2 ms-2" type="submit">
                 Envoyer le formulaire au site !
-              </button></a>
+              </button>
+            <!-- <button onclick="myButton()">Envoyer le formulaire au site !</button>
+            <a href=""><button  type="submit">
+                Envoyer le formulaire au site !
+              </button></a> -->
           </form>
         </div>
         <script>
