--- a/confirmation.html
+++ b/confirmation.html
@@ -56,7 +56,7 @@
                                 <h2 class="text-black">Liens</h2>
                                 <ul class="list-unstyled">
                                     <li><a href="index.html" class="purpleORI disable-link"><em>Accueil</em></a></li>
-                                    <li><a href="02-panier.html" class="purpleORI disable-link"><em>Votre
+                                    <li><a href="cart.html" class="purpleORI disable-link"><em>Votre
                                                 panier</em></a>
                                     </li>
                                 </ul>
@@ -85,7 +85,7 @@
 
     <!-- Message de confirmation d'achat et bouton de retour -->
     <main class="w-full bg-oniPink rounded-lg my-4 py-16 flex justify-center flex-col">
-        <p class="display-5 text-center text-4xl font-bold mb-4">Nous vous remercions pour vos achats !</p>
+        <p class="display-5 text-center text-4xl font-bold mb-4" id="msg"></p>
         <p class="display-6 text-center text-xl mb-4">Voici l'identifiant de votre commande : </p>
         <!-- Ici attribuer un identifiant de commande propre et afficher le prix total -->
 
